<resources>
    <string name="app_name">Fuel Managemnt</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="signup_title">SIGN UP</string>
    <string name="station_owner_title">STATION OWNER DASHBOARD</string>
    <string name="queue">Lets get into the Queue</string>
    <string name="user_title">USER DASHBOARD</string>
    <string name="station_subtitle">FUEL DETAILS</string>
    <string name="username_etxt">Username</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="exsiting_user_txt">Exsiting User</string>
    <string name="no_acc">Don\'t have an account</string>
    <string name="select_user_type">Select User Type</string>
    <string name="fuel_station_owner_tag">Fuel Station Owner</string>
    <string name="user_tag">USER</string>
    <string name="hint_phone">Phone</string>
    <string name="btn_submit">Submit</string>
    <string name="show_btn">SHOW</string>
</resources>