<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg1"
    >

    <TextView
        android:id="@+id/signup_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="129dp"
        android:text="@string/signup_title"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/show_name"
        android:layout_width="180sp"
        android:layout_height="50sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/signup_txt"
        android:layout_marginTop="20sp"
        />

    <EditText
        android:id="@+id/username_edt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100sp"
        android:ems="15"
        android:hint="@string/username_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/password_edt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_edt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50sp"
        android:ems="15"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirm_password_edt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_edt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50sp"
        android:ems="15"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirm_password_edt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40sp"
        android:backgroundTint="@color/teal_700"
        android:ems="10"
        android:onClick="btnSignUp"
        android:text="@string/signup"
        android:textColor="@color/white" />

<<<<<<< HEAD
    <TextView
        android:id="@+id/exsituser_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30sp"
        android:text="@string/exsiting_user_txt"
        android:textColor="@color/purple_700" />
=======


>>>>>>> 2b6ce3cea0247cc59c7c136a6c7a80a787980de3

</RelativeLayout>