<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/bg1">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="LOGIN"
        android:textSize="45sp" />


    <EditText
        android:id="@+id/lusername_edt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100sp"
        android:ems="15"
        android:hint="@string/username_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/lpassword_edt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lusername_edt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50sp"
        android:ems="15"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lpassword_edt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100sp"
        android:backgroundTint="@color/teal_700"
        android:ems="10"
        android:text="@string/login"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/exsituser_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_btn"
        android:layout_marginTop="30sp"
        android:text="@string/no_acc"
        android:textColor="@color/purple_700"
        />

</RelativeLayout>