<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserSelect">

    <TextView
        android:id="@+id/select_usertype_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_user_type"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/owner_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/owner_btn"
        android:layout_width="220sp"
        android:layout_height="100sp"
        android:layout_marginTop="250dp"
        android:text="@string/fuel_station_owner_tag"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/user_btn"
        android:layout_width="220sp"
        android:layout_height="100sp"
        android:layout_marginTop="50dp"
        android:text="@string/user_tag"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/owner_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>